force-app/main/default/objects/Tescribe_Template__mdt/Tescribe_Template__mdt.object-meta.xml
<CustomObject>
    <description
    >Central repository for test data prototypes used by the Tescribe library. Each record stores a JSON snapshot of a &apos;gold standard&apos; record, enabling data-driven unit tests without hard-coding large field sets in Apex.</description>
    <label>Tescribe Template</label>
    <pluralLabel>Tescribe Templates</pluralLabel>
</CustomObject>