force-app/main/default/objects/Tescribe_Template__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description
    >Developer notes explaining the &quot;Persona&quot; or specific data state this template represents (e.g., &quot;Standard Enterprise Account with UK Billing Address&quot;).</description>
    <inlineHelpText
    >Provide a brief explanation of the data scenario this template represents. Helps other developers understand when to use this specific data shape.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>