force-app/main/default/objects/Tescribe_Template__mdt/fields/JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>JSON_Data__c</fullName>
    <description
    >A JSON-formatted map of field-value pairs used as the record prototype. Supports &quot;Salesforce Inspector&quot; export format or hand-written JSON.</description>
    <inlineHelpText
    >Paste the JSON representation of the record here. This can be a &quot;Copy JSON&quot; export from Salesforce Inspector or a custom field-value map.</inlineHelpText>
    <label>JSON Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>