force-app/main/default/objects/Tescribe_Template__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description
    >The API Name of the target SObject (e.g., Account, Opportunity). This is the &quot;Source of Truth&quot; used to instantiate the record in the Tescribe builder.</description>
    <inlineHelpText
    >Enter the exact API Name of the Salesforce object (e.g., Account, Opportunity). This determines the type of record Tescribe will create.</inlineHelpText>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>